Slightly working from-scratch attempt.

--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -70,7 +70,7 @@
 			</div>
 		</div>
 		<div id="footer">
-			<div id="title">DiskTree (<span id="dates"></span>)</div>
+			<div id="title">DiskTree</div>
 			<div id="status"></div>
 			<div id="error"></div>
 		</div>
