--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -76,6 +76,24 @@
 					<th>Count</th>
 					<td id="details_count"></td>
 				</tr>
+				<tr>
+					<th>Groups</th>
+					<td>
+						<div id="details_groups"></div>
+					</td>
+				</tr>
+				<tr>
+					<th>Users</th>
+					<td>
+						<div id="details_users"></div>
+					</td>
+				</tr>
+				<tr>
+					<th>Filetypes</th>
+					<td>
+						<div id="details_filetypes"></div>
+					</td>
+				</tr>
 			</table>
 		</div>
 
