Logout Button and Login Info

--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -36,7 +36,8 @@
 				</div>
 				<div id="error"></div>
 			</div>
-
+			<p>Logged in as: <span id="username"></span></p>
+			<button id="logoutButton">Logout</button>
 			<div>
 				<div>
 					<span class="select_label">Area:</span>
