--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -63,6 +63,9 @@
 						</select>
 					</div>
 				</div>
+				<div id="login_info">
+					<button id="logoutButton">Logout <span id="username"></span></button>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -99,10 +102,6 @@
 				
 			</div>
 
-			<div id="login_info">
-				<small>Logged in as: <span id="username"></span></small>
-				<button id="logoutButton">Logout</button>
-			</div>
 		</div>
 	</div>
 	<script data-main="js/main" src="js/require.js"></script>
