Allow multiple selections and typing for the filters.

--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="css/style.css" rel="stylesheet" type="text/css" />
+	<link href="css/jquery.flexdatalist.min.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 			<div id="chart">
 			</div>
 
-			<div id="filters">
+			<div id="sidebar">
 				<div id="header">
 					<div id="title">
 						DiskTree
@@ -35,10 +36,10 @@
 							<div></div>
 						</div>
 					</div>
-					<div id="error"></div>
 				</div>
+
 				<div>
-					<div>
+					<div class="sidebar_section">
 						<span class="select_label">Area:</span>
 						<form id="select_area">
 							<input type="radio" id="size" name="area" value="size" checked="checked">
@@ -47,27 +48,43 @@
 							<label for="count">Count</label>
 						</form>
 					</div>
-					<div>
-						<span class="select_label">Group:</span>
-						<select id="select_group">
-						</select>
-					</div>
-					<div>
-						<span class="select_label">User:</span>
-						<select id="select_user">
-						</select>
-					</div>
-					<div>
-						<span class="select_label">Filetype:</span>
-						<select id="select_filetype">
-						</select>
+
+					<div class="sidebar_section">
+						<span class="select_label">Filters:</span><br>
+
+						<div class="filter">
+							<input type='text' placeholder='Groups' class='form-control flexdatalist' multiple=''
+								list='groups_list' name='groups_list' id='groups_list'>
+
+							<datalist id="groups_list"></datalist>
+						</div>
+
+						<div class="filter">
+							<input type='text' placeholder='Users' class='form-control flexdatalist' multiple=''
+								list='users_list' name='users_list' id='users_list'>
+
+							<datalist id="users_list"></datalist>
+						</div>
+
+						<div class="filter">
+							<input type='text' placeholder='FileTypes' class='form-control flexdatalist' multiple=''
+								list='ft_list' name='ft_list' id='ft_list'>
+
+							<datalist id="ft_list"></datalist>
+						</div>
+
+						<button id="filterButton">filter</button>
 					</div>
 				</div>
+
+				<div id="error"></div>
+
 				<div id="login_info">
 					<button id="logoutButton">Logout <span id="username"></span></button>
 				</div>
 			</div>
 		</div>
+
 		<div class="row">
 			<div id="details">
 				<span id="details_path"></span>
@@ -99,11 +116,10 @@
 						</td>
 					</tr>
 				</table>
-				
 			</div>
-
 		</div>
 	</div>
+
 	<script data-main="js/main" src="js/require.js"></script>
 </body>
 
