--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -14,11 +14,10 @@
 			<input type="password" placeholder="Password" name="password">
 			<br />
 			<input type="submit" value="Login">
-			
 		</form>
-		<form method="get" action="/login">
-			<button id="login-button" class="btn btn-primary" type="submit">Login with OKTA</button>
-		  </form>
+		<form>
+			<button id="login-button" type="submit">Login with OKTA</button>
+		</form>
 
 		<div id="loginFailure"></div>
 	</div>
