--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -15,7 +15,7 @@
 			<br />
 			<input type="submit" value="Login">
 		</form>
-		<form>
+		<form action="/login">
 			<button id="login-button" type="submit">Login with OKTA</button>
 		</form>
 
