Show last access time.

--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -106,6 +106,10 @@
 					<td id="details_count"></td>
 				</tr>
 				<tr>
+					<th>Accessed</th>
+					<td id="details_atime"></td>
+				</tr>
+				<tr>
 					<th>Groups</th>
 					<td>
 						<div id="details_groups"></div>
