Colour boxes by age.

--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -94,40 +94,62 @@
 			</div>
 		</div>
 
-		<div id="details">
-			<span id="details_path"></span>
-			<table>
-				<tr>
-					<th>Size</th>
-					<td id="details_size"></td>
-				</tr>
-				<tr>
-					<th>Count</th>
-					<td id="details_count"></td>
-				</tr>
-				<tr>
-					<th>Accessed</th>
-					<td id="details_atime"></td>
-				</tr>
-				<tr>
-					<th>Groups</th>
-					<td>
-						<div id="details_groups"></div>
-					</td>
-				</tr>
-				<tr>
-					<th>Users</th>
-					<td>
-						<div id="details_users"></div>
-					</td>
-				</tr>
-				<tr>
-					<th>Filetypes</th>
-					<td>
-						<div id="details_filetypes"></div>
-					</td>
-				</tr>
-			</table>
+		<div id="under">
+			<div id="details">
+				<span id="details_path"></span>
+				<table>
+					<tr>
+						<th>Size</th>
+						<td id="details_size"></td>
+					</tr>
+					<tr>
+						<th>Count</th>
+						<td id="details_count"></td>
+					</tr>
+					<tr>
+						<th>Accessed</th>
+						<td id="details_atime"></td>
+					</tr>
+					<tr>
+						<th>Groups</th>
+						<td>
+							<div id="details_groups"></div>
+						</td>
+					</tr>
+					<tr>
+						<th>Users</th>
+						<td>
+							<div id="details_users"></div>
+						</td>
+					</tr>
+					<tr>
+						<th>Filetypes</th>
+						<td>
+							<div id="details_filetypes"></div>
+						</td>
+					</tr>
+				</table>
+			</div>
+
+			<div id="key">
+				<table>
+					<caption class="key_caption">
+						<span class="key_highlight">Colour Key</span>
+						Greatest time since a file nested within the directory was accessed:
+					</caption>
+					<tr>
+						<td class="age_2years">&gt; 2 years</td>
+						<td class="age_1year">&gt; 1 year</td>
+						<td class="age_10months">&gt; 10 months</td>
+						<td class="age_8months">&gt; 8 months</td>
+						<td class="age_6months">&gt; 6 months</td>
+						<td class="age_4months">&gt; 4 months</td>
+						<td class="age_2months">&gt; 2 months</td>
+						<td class="age_1month">&gt; 1 month</td>
+						<td class="age_1week">&lt; 1 month</td>
+					</tr>
+				</table>
+			</div>
 		</div>
 	</div>
 
