--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -9,18 +9,8 @@
 
 <body>
 	<div id="login" style="display: none;">
-		<!-- <form action="/login">
-			<button id="login-button" type="submit" class="form-control"">Login with OKTA</button>
-		</form>
-
-		<hr>
-		or use LDAP -->
-		<form action="/" id="loginForm">
-			<input type="text" placeholder="Username" name="username" class="form-control">
-			<br />
-			<input type="password" placeholder="Password" name="password" class="form-control">
-			<br />
-			<input type="submit" value="Login" class="form-control">
+		<form action="/login">
+			<button id="login-button" type="submit" class="form-control">Login with OKTA</button>
 		</form>
 
 		<div id="loginFailure"></div>
