--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -70,6 +70,22 @@
 							<datalist id="ft_list"></datalist>
 						</div>
 
+						<div class="filter">
+							<label for="age_filter">Min time since access:</label>
+
+							<select name="age_filter" id="age_filter" class='form-control'>
+								<option value="0">&gt; 0 days</option>
+								<option value="30">&gt; 1 month</option>
+								<option value="61">&gt; 2 months</option>
+								<option value="91">&gt; 3 months</option>
+								<option value="182">&gt; 6 months</option>
+								<option value="243">&gt; 8 months</option>
+								<option value="304">&gt; 10 months</option>
+								<option value="365">&gt; 1 year</option>
+								<option value="730">&gt; 2 years</option>
+							</select>
+						</div>
+
 						<button id="filterButton">filter</button>
 					</div>
 				</div>
