--- a/server/static/tree/tree.html
+++ b/server/static/tree/tree.html
@@ -71,7 +71,7 @@
 						</div>
 
 						<div class="filter">
-							<label for="age_filter">Min time since access:</label>
+							<label for="age_filter">Time since access:</label>
 
 							<select name="age_filter" id="age_filter" class='form-control'>
 								<option value="0">&gt; 0 days</option>
